[project]
name = "lightrag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "configparser>=7.1.0",
    "gensim>=4.3.3",
    "graspologic>=3.4.1",
    "lightrag-hku>=1.1.5",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pipmaster>=0.4.0",
    "pydantic>=2.10.6",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
